--- a/module/Admin/view/admin/categoria/index.phtml
+++ b/module/Admin/view/admin/categoria/index.phtml
@@ -50,7 +50,7 @@ if ($this->msg != null)
                 <?php echo $this->form()->closeTag(); ?>
             </div>
         </div><!--end .box -->
-        <?php if (count($this->categorias)>0) { ?>       
+        <?php if (count($this->registros)>0) { ?>       
         <div class="row">  
             <div class="col-lg-12">
                 <div class="box box-bordered">
@@ -69,11 +69,11 @@ if ($this->msg != null)
                                     </thead>
                                     <tbody>
                                          <?php 
-                                        foreach ($this->categorias as $categ) {
+                                        foreach ($this->registros as $obj) {
                                             echo "
-                                                <tr class='gradeX odd' style='cursor:pointer' onClick=\"$(location).attr('href', '".$this->basePath()."/admin/categoria/index?id=".$categ['idCategoria']."')\">
-                                                    <td>".$categ['codigo']."</td>
-                                                    <td>".$categ['descripcion']."</td>
+                                                <tr class='gradeX odd' style='cursor:pointer' onClick=\"$(location).attr('href', '".$this->basePath()."/admin/categoria/index?id=".$obj['idCategoria']."')\">
+                                                    <td>".$obj['codigo']."</td>
+                                                    <td>".$obj['descripcion']."</td>
                                                 </tr>";
                                         }
                                         ?>
