--- a/module/Admin/view/admin/estado-pedido/index.phtml
+++ b/module/Admin/view/admin/estado-pedido/index.phtml
@@ -12,11 +12,11 @@ if ($this->msg != null)
     <div class="col-lg-12">
         <div class="box">
             <div class="box-head">
-                <header><h4 class="text-light">Formulario <strong>Tipo Cuenta</strong></h4></header>
+                <header><h4 class="text-light">Formulario <strong>Estado Pedído</strong></h4></header>
             </div>
             <div class="box-body">
                 <?php echo $this->form()->openTag($form); ?>
-                    <?php echo $this->formInput($form->get('idTipoCuenta'));?>
+                    <?php echo $this->formInput($form->get('idEstadoPedido'));?>
                     <div class="form-group">
                         <div class="col-lg-1 col-md-2 col-sm-3">
                             <label for="email1" class="control-label">Código</label>
@@ -49,7 +49,7 @@ if ($this->msg != null)
             <div class="col-lg-12">
                 <div class="box box-bordered">
                     <div class="box-head">
-                        <header><h4 class="text-light"><strong>Tipo Cuenta</strong> <small>Todas</small></h4></header>
+                        <header><h4 class="text-light"><strong>Estado Pedído</strong> <small>Todas</small></h4></header>
                     </div>
                     <div class="box"> 
                         <div class="box-body table-responsive">
@@ -65,7 +65,7 @@ if ($this->msg != null)
                                          <?php 
                                         foreach ($this->registros as $obj) {
                                             echo "
-                                                <tr class='gradeX odd' style='cursor:pointer' onClick=\"$(location).attr('href', '".$this->basePath()."/admin/tipocuenta/index?id=".$obj['idTipoCuenta']."')\">
+                                                <tr class='gradeX odd' style='cursor:pointer' onClick=\"$(location).attr('href', '".$this->basePath()."/admin/estadopedido/index?id=".$obj['idEstadoPedido']."')\">
                                                     <td>".$obj['codigo']."</td>
                                                     <td>".$obj['descripcion']."</td>
                                                 </tr>";
