--- a/module/Admin/view/layout/admin.phtml
+++ b/module/Admin/view/layout/admin.phtml
@@ -109,7 +109,7 @@ if (defined('RUNNING_FROM_ROOT')) {
                                 <li class="dropdown-header">Config</li>
                                 <li><a href="../../html/pages/profile.html">My profile</a></li>
                                 <li class="divider"></li>
-                                <li><a href="<?php echo str_replace("/public","",$this->basePath())?>/administrator/login/salir?admin=true"><i class="fa fa-fw fa-power-off text-danger"></i>Salir</a></li>
+                                <li><a href="<?php echo str_replace("/public", "",$this->basePath())?>/admin/login/exit"><i class="fa fa-fw fa-power-off text-danger"></i>Salir</a></li>
                             </ul><!--end .dropdown-menu -->
                         </li><!--end .dropdown -->
                     </ul><!--end .nav -->
