--- a/module/Admin/view/admin/usuario/index.phtml
+++ b/module/Admin/view/admin/usuario/index.phtml
@@ -11,34 +11,42 @@ if ($this->msg != null)
     <div class="col-lg-12">
         <div class="box">
             <div class="box-head">
-                <header><h4 class="text-light">Formulario <strong>Municipio</strong></h4></header>
+                <header><h4 class="text-light">Formulario <strong>Usuario</strong></h4></header>
             </div>
             <div class="box-body">
                 <?php echo $this->form()->openTag($form); ?>
-                    <?php echo $this->formInput($form->get('idMunicipio'));?>
+                    <?php echo $this->formInput($form->get('idUsuario'));?>
                  <div class="form-group">
                         <div class="col-lg-1 col-md-2 col-sm-3">
-                            <label for="email1" class="control-label">Departamento</label>
+                            <label for="email1" class="control-label">Tipo Documento</label>
                         </div>
                         <div class="col-lg-3 col-md-11 col-sm-9">
-                             <?php echo $this->formElement($form->get('idDepartamento'));?>                          
+                             <?php echo $this->formElement($form->get('idTipoUsuario'));?>                          
                         </div>
                     </div>
                 
                     <div class="form-group">
                         <div class="col-lg-1 col-md-2 col-sm-3">
-                            <label for="email1" class="control-label">Código</label>
+                            <label for="email1" class="control-label">Tercero </label>
                         </div>
                         <div class="col-lg-3 col-md-11 col-sm-9">
-                             <?php echo $this->formInput($form->get('codigo'));?>                            
+                             <?php echo $this->formElement($form->get('idDatoBasicoTercero'));?>                            
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-lg-1 col-md-2 col-sm-3">
-                            <label for="email1" class="control-label">Descripción</label>
+                            <label for="email1" class="control-label">Email</label>
                         </div>
                         <div class="col-lg-5 col-md-11 col-sm-9">
-                            <?php echo $this->formInput($form->get('descripcion'));?>                            
+                            <?php echo $this->formInput($form->get('email'));?>                            
+                        </div>
+                    </div>
+                <div class="form-group">
+                        <div class="col-lg-1 col-md-2 col-sm-3">
+                            <label for="email1" class="control-label">clave</label>
+                        </div>
+                        <div class="col-lg-5 col-md-11 col-sm-9">
+                            <?php echo $this->formInput($form->get('clave'));?>                            
                         </div>
                     </div>
                     <div class="form-footer col-lg-offset-1 col-md-offset-2 col-sm-offset-3">
@@ -57,7 +65,7 @@ if ($this->msg != null)
             <div class="col-lg-12">
                 <div class="box box-bordered">
                     <div class="box-head">
-                        <header><h4 class="text-light"><strong>Municipios</strong> <small>Todas</small></h4></header>
+                        <header><h4 class="text-light"><strong>Usuarios</strong> <small>Todas</small></h4></header>
                     </div>
                     <div class="box"> 
                         <div class="box-body table-responsive">
@@ -65,19 +73,19 @@ if ($this->msg != null)
                                 <table id="dtbuscar" class="table table-striped table-hover dataTable" aria-describedby="dtcrudindex_info">
                                     <thead>
                                         <tr role="row">
-                                            <th lass="sorting" role="columnheader" tabindex="0" aria-controls="dtcrudindex" rowspan="1" colspan="1">Código</th>
-                                            <th lass="sorting" role="columnheader" tabindex="1" aria-controls="dtcrudindex" rowspan="1" colspan="1">Descripción</th>
-                                            <th lass="sorting" role="columnheader" tabindex="2" aria-controls="dtcrudindex" rowspan="1" colspan="1">Departamento</th>
+                                            <th lass="sorting" role="columnheader" tabindex="0" aria-controls="dtcrudindex" rowspan="1" colspan="1">Tipo Documento</th>
+                                            <th lass="sorting" role="columnheader" tabindex="0" aria-controls="dtcrudindex" rowspan="1" colspan="1">Tercero</th>
+                                            <th lass="sorting" role="columnheader" tabindex="1" aria-controls="dtcrudindex" rowspan="1" colspan="1">Email</th>
                                         </tr>
                                     </thead>
                                     <tbody>
                                          <?php 
                                         foreach ($this->registros as $obj) {
                                             echo "
-                                                <tr class='gradeX odd' style='cursor:pointer' onClick=\"$(location).attr('href', '".$this->basePath()."/admin/municipio/index?id=".$obj['idMunicipio']."')\">
-                                                    <td>".$obj['codigo']."</td>
-                                                    <td>".$obj['descripcion']."</td>
-                                                    <td>".$obj['descripcionDepartamento']."</td>
+                                                <tr class='gradeX odd' style='cursor:pointer' onClick=\"$(location).attr('href', '".$this->basePath()."/admin/usuario/index?id=".$obj['idUsuario']."')\">
+                                                    <td>Tipo Documento</td>
+                                                    <td>Tercero</td>
+                                                    <td>".$obj['email']."</td>
                                                 </tr>";
                                         }
                                         ?>
