--- a/module/Admin/view/admin/usuario/index.phtml
+++ b/module/Admin/view/admin/usuario/index.phtml
@@ -18,7 +18,7 @@ if ($this->msg != null)
                     <?php echo $this->formInput($form->get('idUsuario'));?>
                  <div class="form-group">
                         <div class="col-lg-1 col-md-2 col-sm-3">
-                            <label for="email1" class="control-label">Tipo Documento</label>
+                            <label for="email1" class="control-label">Tipo Usuario</label>
                         </div>
                         <div class="col-lg-3 col-md-11 col-sm-9">
                              <?php echo $this->formElement($form->get('idTipoUsuario'));?>                          
@@ -74,8 +74,8 @@ if ($this->msg != null)
                                     <thead>
                                         <tr role="row">
                                             <th lass="sorting" role="columnheader" tabindex="0" aria-controls="dtcrudindex" rowspan="1" colspan="1">Tipo Documento</th>
-                                            <th lass="sorting" role="columnheader" tabindex="0" aria-controls="dtcrudindex" rowspan="1" colspan="1">Tercero</th>
-                                            <th lass="sorting" role="columnheader" tabindex="1" aria-controls="dtcrudindex" rowspan="1" colspan="1">Email</th>
+                                            <th lass="sorting" role="columnheader" tabindex="1" aria-controls="dtcrudindex" rowspan="1" colspan="1">Tercero</th>
+                                            <th lass="sorting" role="columnheader" tabindex="2" aria-controls="dtcrudindex" rowspan="1" colspan="1">Email</th>
                                         </tr>
                                     </thead>
                                     <tbody>
