--- a/module/Admin/view/admin/dato-basico-tercero/index.phtml
+++ b/module/Admin/view/admin/dato-basico-tercero/index.phtml
@@ -116,13 +116,13 @@ if ($this->msg != null) {
                                             <tr role="row">
                                                 <th lass="sorting" role="columnheader" tabindex="0" aria-controls="dtcrudindex" rowspan="1" colspan="1">Tipo Documento</th>
                                                 <th lass="sorting" role="columnheader" tabindex="1" aria-controls="dtcrudindex" rowspan="1" colspan="1">Nif</th>
-                                                <th lass="sorting" role="columnheader" tabindex="1" aria-controls="dtcrudindex" rowspan="1" colspan="1">Descripción</th>
-                                                <th lass="sorting" role="columnheader" tabindex="1" aria-controls="dtcrudindex" rowspan="1" colspan="1">Primer Nombre</th>
-                                                <th lass="sorting" role="columnheader" tabindex="1" aria-controls="dtcrudindex" rowspan="1" colspan="1">Segundo Nombre</th>
-                                                <th lass="sorting" role="columnheader" tabindex="1" aria-controls="dtcrudindex" rowspan="1" colspan="1">Primer Apellido</th>
-                                                <th lass="sorting" role="columnheader" tabindex="1" aria-controls="dtcrudindex" rowspan="1" colspan="1">Segundo Apellido</th>
-                                                <th lass="sorting" role="columnheader" tabindex="1" aria-controls="dtcrudindex" rowspan="1" colspan="1">Dirección</th>
-                                                <th lass="sorting" role="columnheader" tabindex="1" aria-controls="dtcrudindex" rowspan="1" colspan="1">Teléfono</th>
+                                                <th lass="sorting" role="columnheader" tabindex="2" aria-controls="dtcrudindex" rowspan="1" colspan="1">Descripción</th>
+                                                <th lass="sorting" role="columnheader" tabindex="3" aria-controls="dtcrudindex" rowspan="1" colspan="1">Primer Nombre</th>
+                                                <th lass="sorting" role="columnheader" tabindex="4" aria-controls="dtcrudindex" rowspan="1" colspan="1">Segundo Nombre</th>
+                                                <th lass="sorting" role="columnheader" tabindex="5" aria-controls="dtcrudindex" rowspan="1" colspan="1">Primer Apellido</th>
+                                                <th lass="sorting" role="columnheader" tabindex="6" aria-controls="dtcrudindex" rowspan="1" colspan="1">Segundo Apellido</th>
+                                                <th lass="sorting" role="columnheader" tabindex="7" aria-controls="dtcrudindex" rowspan="1" colspan="1">Dirección</th>
+                                                <th lass="sorting" role="columnheader" tabindex="8" aria-controls="dtcrudindex" rowspan="1" colspan="1">Teléfono</th>
                                             </tr>
                                         </thead>
                                         <tbody>
@@ -130,7 +130,7 @@ if ($this->msg != null) {
                                             foreach ($this->registros as $obj) {
                                                 echo "
                                                 <tr class='gradeX odd' style='cursor:pointer' onClick=\"$(location).attr('href', '" . $this->basePath() . "/admin/datobasicotercero/index?id=" . $obj['idDatoBasicoTercero'] . "')\">
-                                                    <td>Soy el tipo Doc</td>
+                                                    <td>". $obj['descripcionTipoDocumento'] ."</td>
                                                     <td>" . $obj['nit'] . "</td>
                                                     <td>" . $obj['descripcion'] . "</td>
                                                     <td>" . $obj['primerNombre'] . "</td>
