--- a/module/Admin/view/layout/admin.phtml
+++ b/module/Admin/view/layout/admin.phtml
@@ -151,12 +151,12 @@ if (defined('RUNNING_FROM_ROOT')) {
                                 <li>
                                     <a href="javascript:void(0);"> <span class="expand-sign">+</span>Parámetros</a>
                                     <ul style="display: none;">
-                                        <li><a href="<?php echo str_replace("/public","",$this->basePath()) ?>/administrator/pedido" >Categoria</a></li>
-                                        <li><a href="<?php echo str_replace("/public","",$this->basePath()) ?>/administrator/pedido" >Marca</a></li>
+                                        <li><a href="<?php echo str_replace("/public","",$this->basePath()) ?>/admin/categoria" >Categoria</a></li>
+                                        <li><a href="<?php echo str_replace("/public","",$this->basePath()) ?>/admin/marca" >Marca</a></li>
                                     </ul>
                                 </li>
-                                <li><a href="<?php echo str_replace("/public","",$this->basePath()) ?>/administrator/pedido" >Producto</a></li>
-                                <li><a href="<?php echo str_replace("/public","",$this->basePath()) ?>/administrator/pedido" >Imagenes Producto</a></li>
+                                <li><a href="<?php echo str_replace("/public","",$this->basePath()) ?>/admin/pedido" >Producto</a></li>
+                                <li><a href="<?php echo str_replace("/public","",$this->basePath()) ?>/admin/pedido" >Imagenes Producto</a></li>
                                 
                             </ul><!--end /submenu -->
                         </li><!--end /menu-item -->
@@ -166,8 +166,8 @@ if (defined('RUNNING_FROM_ROOT')) {
                             </a>
                             <!--start submenu -->
                             <ul>
-                                <li><a href="<?php echo str_replace("/public","",$this->basePath()) ?>/administrator/pedido" >Saldo Inventario</a></li>
-                                <li><a href="<?php echo str_replace("/public","",$this->basePath()) ?>/administrator/pedido" >Movimiento de Inventarios</a></li>
+                                <li><a href="<?php echo str_replace("/public","",$this->basePath()) ?>/admin/saldoinventario" >Saldo Inventario</a></li>
+                                <li><a href="<?php echo str_replace("/public","",$this->basePath()) ?>/admin/movimientoinventario" >Movimiento de Inventarios</a></li>
                             </ul><!--end /submenu -->
                         </li><!--end /menu-item -->
                         <li>
@@ -179,16 +179,16 @@ if (defined('RUNNING_FROM_ROOT')) {
                                 <li>
                                     <a href="javascript:void(0);"> <span class="expand-sign">+</span>División Territorial</a>
                                     <ul style="display: none;">
-                                        <li><a href="#">Pais</a></li>
-                                        <li><a href="#">Departamento</a></li>
-                                        <li><a href="#">Municipio</a></li>
+                                        <li><a href="<?php echo str_replace("/public","",$this->basePath()) ?>/admin/pais">Pais</a></li>
+                                        <li><a href="<?php echo str_replace("/public","",$this->basePath()) ?>/admin/departamento">Departamento</a></li>
+                                        <li><a href="<?php echo str_replace("/public","",$this->basePath()) ?>/admin/municipio">Municipio</a></li>
                                     </ul>
                                 </li>
-                                <li><a href="<?php echo str_replace("/public","",$this->basePath()) ?>/administrator/pedido" >Dato Basico Tercero</a></li>
-                                <li><a href="<?php echo str_replace("/public","",$this->basePath()) ?>/administrator/pedido" >Proveedor</a></li>
-                                <li><a href="<?php echo str_replace("/public","",$this->basePath()) ?>/administrator/pedido" >Proveedor Oficina</a></li>
-                                <li><a href="<?php echo str_replace("/public","",$this->basePath()) ?>/administrator/pedido" >Cliente</a></li>
-                                <li><a href="<?php echo str_replace("/public","",$this->basePath()) ?>/administrator/pedido" >Tipo Documento</a></li>
+                                <li><a href="<?php echo str_replace("/public","",$this->basePath()) ?>/admin/datobasicotercer" >Dato Basico Tercero</a></li>
+                                <li><a href="<?php echo str_replace("/public","",$this->basePath()) ?>/admin/proveedor" >Proveedor</a></li>
+                                <li><a href="<?php echo str_replace("/public","",$this->basePath()) ?>/admin/proveedoroficina" >Proveedor Oficina</a></li>
+                                <li><a href="<?php echo str_replace("/public","",$this->basePath()) ?>/admin/cliente" >Cliente</a></li>
+                                <li><a href="<?php echo str_replace("/public","",$this->basePath()) ?>/admin/tipodocumento" >Tipo Documento</a></li>
                             </ul><!--end /submenu -->
                         </li><!--end /menu-item -->
                         <!-- Menu Pages -->
@@ -198,8 +198,8 @@ if (defined('RUNNING_FROM_ROOT')) {
                             </a>
                             <!--start submenu -->
                             <ul>
-                                <li><a href="#" >Usuarios<span class="badge" id="lblNumUsuario">42</span></a></li>
-                                <li><a href="#" >Tipo Usuarios</a></li>
+                                <li><a href="<?php echo str_replace("/public","",$this->basePath()) ?>/admin/usuario" >Usuarios<span class="badge" id="lblNumUsuario">42</span></a></li>
+                                <li><a href="<?php echo str_replace("/public","",$this->basePath()) ?>/admin/tipousuario">Tipo Usuarios</a></li>
                             </ul>
                         </li><!--end /menu-item -->
 
