se ajustan las rutas de los formularios

--- a/module/Admin/view/layout/admin.phtml
+++ b/module/Admin/view/layout/admin.phtml
@@ -184,7 +184,7 @@ if (defined('RUNNING_FROM_ROOT')) {
                                         <li><a href="<?php echo str_replace("/public","",$this->basePath()) ?>/admin/municipio">Municipio</a></li>
                                     </ul>
                                 </li>
-                                <li><a href="<?php echo str_replace("/public","",$this->basePath()) ?>/admin/datobasicotercer" >Dato Basico Tercero</a></li>
+                                <li><a href="<?php echo str_replace("/public","",$this->basePath()) ?>/admin/datobasicotercero" >Dato Basico Tercero</a></li>
                                 <li><a href="<?php echo str_replace("/public","",$this->basePath()) ?>/admin/proveedor" >Proveedor</a></li>
                                 <li><a href="<?php echo str_replace("/public","",$this->basePath()) ?>/admin/proveedoroficina" >Proveedor Oficina</a></li>
                                 <li><a href="<?php echo str_replace("/public","",$this->basePath()) ?>/admin/cliente" >Cliente</a></li>
