--- a/module/Admin/view/layout/admin.phtml
+++ b/module/Admin/view/layout/admin.phtml
@@ -104,7 +104,11 @@ if (defined('RUNNING_FROM_ROOT')) {
 
                         <li><span class="navbar-devider"></span></li>
                         <li class="dropdown">
-                            <a href="javascript:void(0);" class="navbar-profile dropdown-toggle text-bold" data-toggle="dropdown"> <i class="fa fa-fw fa-angle-down"></i> <img class="img-circle" src="<?php echo $this->basePath() ?>/admin/assets/img/avatar1.jpg?1401297311" alt="" /></a>
+                            <a href="javascript:void(0);" class="navbar-profile dropdown-toggle text-bold" data-toggle="dropdown">
+                                <?php echo $_SESSION['user']['username'];?>
+                                <i class="fa fa-fw fa-angle-down"></i> 
+                                <img class="img-circle" src="<?php echo $this->basePath() ?>/admin/assets/img/avatar1.jpg?1401297311" alt="" />
+                            </a>
                             <ul class="dropdown-menu animation-slide">
                                 <li class="dropdown-header">Config</li>
                                 <li><a href="../../html/pages/profile.html">My profile</a></li>
@@ -155,8 +159,8 @@ if (defined('RUNNING_FROM_ROOT')) {
                                         <li><a href="<?php echo str_replace("/public","",$this->basePath()) ?>/admin/marca" >Marca</a></li>
                                     </ul>
                                 </li>
-                                <li><a href="<?php echo str_replace("/public","",$this->basePath()) ?>/admin/pedido" >Producto</a></li>
-                                <li><a href="<?php echo str_replace("/public","",$this->basePath()) ?>/admin/pedido" >Imagenes Producto</a></li>
+                                <li><a href="<?php echo str_replace("/public","",$this->basePath()) ?>/admin/producto" >Producto</a></li>
+                                <li><a href="<?php echo str_replace("/public","",$this->basePath()) ?>/admin/imagenproducto" >Imagenes Producto</a></li>
                                 
                             </ul><!--end /submenu -->
                         </li><!--end /menu-item -->
