--- a/module/Admin/view/admin/imagen-producto/index.phtml
+++ b/module/Admin/view/admin/imagen-producto/index.phtml
@@ -8,8 +8,8 @@ if ($this->msg != null)
 }
 ?>
 <div class="row">
-    <div class="col-lg-12">
-        <div class="box">
+    <div class="col-lg-8">
+        <div class="box box-outlined">
             <div class="box-head">
                 <header><h4 class="text-light">Formulario <strong>Imagen Producto</strong></h4></header>
             </div>
@@ -20,7 +20,7 @@ if ($this->msg != null)
                         <div class="col-lg-1 col-md-2 col-sm-3">
                             <label for="email1" class="control-label">Producto</label>
                         </div>
-                        <div class="col-lg-3 col-md-11 col-sm-9">
+                        <div class="col-lg-8 col-md-11 col-sm-9">
                              <?php echo $this->formElement($form->get('idProducto'));?>                           
                         </div>
                     </div>
@@ -28,7 +28,7 @@ if ($this->msg != null)
                         <div class="col-lg-1 col-md-2 col-sm-3">
                             <label for="email1" class="control-label">Imagen</label>
                         </div>
-                        <div class="col-lg-5 col-md-11 col-sm-9">
+                        <div class="col-lg-8 col-md-11 col-sm-9">
                             <?php echo $this->formElement($form->get('image-file'));?>   
                             <?php echo $this->formInput($form->get('url'));?>      
                         </div>
@@ -44,6 +44,26 @@ if ($this->msg != null)
                 <?php echo $this->form()->closeTag(); ?>
             </div>
         </div><!--end .box -->
+    </div>
+    
+    <div class="col-sm-2 style-inverse">
+          <div class="holder">
+                <img class="img-rounded img-responsive" src="<?php echo $form->get('url')->getValue() ?>" alt="">
+                <!--<div class="stick-bottom-left">
+                        <a class="btn btn-inverse btn-equal" data-toggle="tooltip" data-placement="top" data-original-title="Contact me"><i class="fa fa-envelope"></i></a>
+                        <a class="btn btn-inverse btn-equal" data-toggle="tooltip" data-placement="top" data-original-title="Follow me"><i class="fa fa-twitter"></i></a>
+                        <a class="btn btn-inverse btn-equal" data-toggle="tooltip" data-placement="top" data-original-title="Personal info"><i class="fa fa-facebook"></i></a>
+                </div>-->
+        </div>
+        <!--
+        <div class="box box-outlined">
+            <div class="blog-image">
+                <img class="img-responsive" src="<?php echo $form->get('url')->getValue() ?>" alt="">
+            </div>
+        </div>
+        -->
+    </div>
+    <div class="col-lg-12">
         <?php if (count($this->registros)>0) { ?>       
         <div class="row">  
             <div class="col-lg-12">
