--- a/module/Admin/view/layout/admin.phtml
+++ b/module/Admin/view/layout/admin.phtml
@@ -107,7 +107,7 @@ if (defined('RUNNING_FROM_ROOT')) {
                             <a href="javascript:void(0);" class="navbar-profile dropdown-toggle text-bold" data-toggle="dropdown">
                                 <?php echo $_SESSION['user']['username'];?>
                                 <i class="fa fa-fw fa-angle-down"></i> 
-                                <img class="img-circle" src="<?php echo $this->basePath() ?>/admin/assets/img/avatar1.jpg?1401297311" alt="" />
+                                <img class="img-circle" src="<?php echo $this->basePath() ?>/admin/assets/img/Ninja Head-48.png" alt="" />
                             </a>
                             <ul class="dropdown-menu animation-slide">
                                 <li class="dropdown-header">Config</li>
