--- a/module/Admin/view/admin/usuario/index.phtml
+++ b/module/Admin/view/admin/usuario/index.phtml
@@ -29,15 +29,18 @@ if ($this->msg != null)
                         <div class="col-lg-1 col-md-2 col-sm-3">
                             <label for="email1" class="control-label">Tercero </label>
                         </div>
-                        <div class="col-lg-3 col-md-11 col-sm-9">
+                        <div class="col-lg-4 col-md-11 col-sm-9">
                              <?php echo $this->formElement($form->get('idDatoBasicoTercero'));?>                            
+                        </div>
+                        <div class="col-lg-3 col-md-11 col-sm-9">
+                             <?php echo $this->formElement($form->get('btnBuscarTercero'));?>                            
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-lg-1 col-md-2 col-sm-3">
                             <label for="email1" class="control-label">Email</label>
                         </div>
-                        <div class="col-lg-5 col-md-11 col-sm-9">
+                        <div class="col-lg-3 col-md-11 col-sm-9">
                             <?php echo $this->formInput($form->get('email'));?>                            
                         </div>
                     </div>
@@ -45,7 +48,7 @@ if ($this->msg != null)
                         <div class="col-lg-1 col-md-2 col-sm-3">
                             <label for="email1" class="control-label">clave</label>
                         </div>
-                        <div class="col-lg-5 col-md-11 col-sm-9">
+                        <div class="col-lg-3 col-md-11 col-sm-9">
                             <?php echo $this->formInput($form->get('clave'));?>                            
                         </div>
                     </div>
