--- a/module/Admin/view/admin/proveedor/index.phtml
+++ b/module/Admin/view/admin/proveedor/index.phtml
@@ -20,15 +20,18 @@ if ($this->msg != null)
                         <div class="col-lg-1 col-md-2 col-sm-3">
                             <label for="email1" class="control-label">Tercero </label>
                         </div>
-                        <div class="col-lg-3 col-md-11 col-sm-9">
+                        <div class="col-lg-4 col-md-11 col-sm-9">
                              <?php echo $this->formElement($form->get('idDatoBasicoTercero'));?>                            
+                        </div>
+                        <div class="col-lg-3 col-md-11 col-sm-9">
+                             <?php echo $this->formElement($form->get('btnBuscarTercero'));?>                            
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-lg-1 col-md-2 col-sm-3">
                             <label for="email1" class="control-label">Email</label>
                         </div>
-                        <div class="col-lg-5 col-md-11 col-sm-9">
+                        <div class="col-lg-4 col-md-11 col-sm-9">
                             <?php echo $this->formInput($form->get('email'));?>                            
                         </div>
                     </div>
@@ -36,7 +39,7 @@ if ($this->msg != null)
                         <div class="col-lg-1 col-md-2 col-sm-3">
                             <label for="email1" class="control-label">Numero Cuenta Bancaria</label>
                         </div>
-                        <div class="col-lg-5 col-md-11 col-sm-9">
+                        <div class="col-lg-4 col-md-11 col-sm-9">
                             <?php echo $this->formInput($form->get('numCuentaBancaria'));?>                            
                         </div>
                     </div>
