--- a/module/Admin/view/admin/proveedor-oficina/index.phtml
+++ b/module/Admin/view/admin/proveedor-oficina/index.phtml
@@ -20,8 +20,11 @@ if ($this->msg != null)
                         <div class="col-lg-1 col-md-2 col-sm-3">
                             <label for="email1" class="control-label">Proveedor </label>
                         </div>
-                        <div class="col-lg-5 col-md-11 col-sm-9">
+                        <div class="col-lg-4 col-md-11 col-sm-9">
                              <?php echo $this->formElement($form->get('idProveedor'));?>                            
+                        </div>
+                        <div class="col-lg-1">
+                             <?php echo $this->formElement($form->get('btnBuscarProveedor'));?>                            
                         </div>
                     </div>
                     <div class="form-group">
@@ -36,7 +39,7 @@ if ($this->msg != null)
                         <div class="col-lg-1 col-md-2 col-sm-3">
                             <label for="email1" class="control-label">Email</label>
                         </div>
-                        <div class="col-lg-5 col-md-11 col-sm-9">
+                        <div class="col-lg-3 col-md-11 col-sm-9">
                             <?php echo $this->formInput($form->get('email'));?>                            
                         </div>
                     </div>
@@ -44,7 +47,7 @@ if ($this->msg != null)
                         <div class="col-lg-1 col-md-2 col-sm-3">
                             <label for="email1" class="control-label">Dirección</label>
                         </div>
-                        <div class="col-lg-5 col-md-11 col-sm-9">
+                        <div class="col-lg-3 col-md-11 col-sm-9">
                             <?php echo $this->formInput($form->get('direccion'));?>                            
                         </div>
                     </div>
