--- a/module/Admin/view/admin/saldo-inventario/index.phtml
+++ b/module/Admin/view/admin/saldo-inventario/index.phtml
@@ -24,7 +24,7 @@ if ($this->msg != null)
                              <?php echo $this->formElement($form->get('idProducto'));?> 
                             
                         </div>
-                        <div class="col-lg-1 col-md-2 col-sm-3">
+                        <div class="col-lg-1">
                              <?php echo $this->formElement($form->get('btnBuscarProducto'));?> 
                         </div>
                     </div>
