--- a/module/Admin/view/admin/usuario/index.phtml
+++ b/module/Admin/view/admin/usuario/index.phtml
@@ -32,7 +32,7 @@ if ($this->msg != null)
                         <div class="col-lg-4 col-md-11 col-sm-9">
                              <?php echo $this->formElement($form->get('idDatoBasicoTercero'));?>                            
                         </div>
-                        <div class="col-lg-3 col-md-11 col-sm-9">
+                        <div class="col-lg-1">
                              <?php echo $this->formElement($form->get('btnBuscarTercero'));?>                            
                         </div>
                     </div>
