--- a/module/Admin/view/admin/categoria/buscar.phtml
+++ b/module/Admin/view/admin/categoria/buscar.phtml
@@ -4,12 +4,12 @@
     });
 </script>
 <div class="row">
-    <div class="col-lg-12">   
+    <div class="col-lg-12">     
         <div class="row">  
             <div class="col-lg-12">
                 <div class="box box-bordered">
                     <div class="box-head">
-                        <header><h4 class="text-light"><strong>Productos</strong></h4></header>
+                        <header><h4 class="text-light"><strong>Categorias</strong></h4></header>
                         <a class="btn btn-equal btn-sm btn-close" id="btnClosePop" style="float: right" data-dismiss="modal" aria-hidden="true"><i class="fa fa-times"></i></a>
                     </div>
                     <div class="box"> 
@@ -18,23 +18,17 @@
                                 <table id="dtbuscar" class="table table-striped table-hover dataTable" aria-describedby="dtcrudindex_info">
                                     <thead>
                                         <tr role="row">
-                                            <th lass="sorting" role="columnheader" tabindex="0" aria-controls="dtcrudindex" rowspan="1" colspan="1">Referencia</th>
-                                            <th lass="sorting" role="columnheader" tabindex="1" aria-controls="dtcrudindex" rowspan="1" colspan="1">Codigo</th>
-                                            <th lass="sorting" role="columnheader" tabindex="2" aria-controls="dtcrudindex" rowspan="1" colspan="1">Nombre</th>
-                                            <th lass="sorting" role="columnheader" tabindex="3" aria-controls="dtcrudindex" rowspan="1" colspan="1">Marca</th>
-                                            <th lass="sorting" role="columnheader" tabindex="4" aria-controls="dtcrudindex" rowspan="1" colspan="1">Categoria</th>
+                                            <th lass="sorting" role="columnheader" tabindex="0" aria-controls="dtcrudindex" rowspan="1" colspan="1">Código</th>
+                                            <th lass="sorting" role="columnheader" tabindex="1" aria-controls="dtcrudindex" rowspan="1" colspan="1">Descripción</th>
                                         </tr>
                                     </thead>
                                     <tbody>
                                          <?php 
                                         foreach ($this->registros as $obj) {
                                             echo "
-                                                <tr class='gradeX odd' style='cursor:pointer' onClick=\"$('#idProducto').val(".$obj['idProducto'].");$('#btnClosePop').click();$('#modal-dialog-display').html('')\")\">
-                                                    <td>".$obj['referencia']."</td>
+                                                <tr class='gradeX odd' style='cursor:pointer' onClick=\"$('#idCategoria').val(".$obj['idCategoria'].");$('#btnClosePop').click();$('#modal-dialog-display').html('')\")\">
                                                     <td>".$obj['codigo']."</td>
-                                                    <td>".$obj['nombre']."</td>
-                                                    <td>".$obj['descripcionMarca']."</td>
-                                                    <td>".$obj['descripcionCategoria']."</td>
+                                                    <td>".$obj['descripcion']."</td>
                                                 </tr>";
                                         }
                                         ?>
