--- a/module/Admin/view/admin/marca/buscar.phtml
+++ b/module/Admin/view/admin/marca/buscar.phtml
@@ -1,6 +1,6 @@
 <script type="text/javascript">
     $(document).ready(function() {
-        $('#dtbuscar').DataTable();   
+        $('#dtbuscarMarca').DataTable();   
     });
 </script>
 <div class="row">
@@ -10,11 +10,12 @@
                 <div class="box box-bordered">
                     <div class="box-head">
                         <header><h4 class="text-light"><strong>Marcas</strong></h4></header>
+                        <a class="btn btn-equal btn-sm btn-close" id="btnClosePop" style="float: right" data-dismiss="modal" aria-hidden="true"><i class="fa fa-times"></i></a>
                     </div>
                     <div class="box"> 
                         <div class="box-body table-responsive">
                             <div id="dtcrudindex_wrapper" class="dataTables_wrapper" role="grid">
-                                <table id="dtbuscar" class="table table-striped table-hover dataTable" aria-describedby="dtcrudindex_info">
+                                <table id="dtbuscarMarca" class="table table-striped table-hover dataTable" aria-describedby="dtcrudindex_info">
                                     <thead>
                                         <tr role="row">
                                             <th lass="sorting" role="columnheader" tabindex="0" aria-controls="dtcrudindex" rowspan="1" colspan="1">Código</th>
