--- a/module/Admin/view/admin/producto/buscar.phtml
+++ b/module/Admin/view/admin/producto/buscar.phtml
@@ -1,6 +1,6 @@
 <script type="text/javascript">
     $(document).ready(function() {
-        $('#dtbuscar').DataTable();   
+        $('#dtbuscarProducto').DataTable();   
     });
 </script>
 <div class="row">
@@ -15,7 +15,7 @@
                     <div class="box"> 
                         <div class="box-body table-responsive">
                             <div id="dtcrudindex_wrapper" class="dataTables_wrapper" role="grid">
-                                <table id="dtbuscar" class="table table-striped table-hover dataTable" aria-describedby="dtcrudindex_info">
+                                <table id="dtbuscarProducto" class="table table-striped table-hover dataTable" aria-describedby="dtcrudindex_info">
                                     <thead>
                                         <tr role="row">
                                             <th lass="sorting" role="columnheader" tabindex="0" aria-controls="dtcrudindex" rowspan="1" colspan="1">Referencia</th>
