--- a/module/Admin/view/admin/producto/index.phtml
+++ b/module/Admin/view/admin/producto/index.phtml
@@ -23,6 +23,9 @@ if ($this->msg != null)
                         <div class="col-lg-3 col-md-11 col-sm-9">
                              <?php echo $this->formElement($form->get('idMarca'));?>                            
                         </div>
+                        <div class="col-lg-1">
+                             <?php echo $this->formElement($form->get('btnBuscarMarca'));?>                            
+                        </div>
                     </div>
                     <div class="form-group">
                         <div class="col-lg-1 col-md-2 col-sm-3">
@@ -30,6 +33,9 @@ if ($this->msg != null)
                         </div>
                         <div class="col-lg-3 col-md-11 col-sm-9">
                              <?php echo $this->formElement($form->get('idCategoria'));?>                            
+                        </div>
+                        <div class="col-lg-1">
+                             <?php echo $this->formElement($form->get('btnBuscarCategoria'));?>                            
                         </div>
                     </div>
                     <div class="form-group">
