--- a/module/Admin/view/admin/proveedor-oficina/index.phtml
+++ b/module/Admin/view/admin/proveedor-oficina/index.phtml
@@ -34,6 +34,9 @@ if ($this->msg != null)
                         <div class="col-lg-3 col-md-11 col-sm-9">
                              <?php echo $this->formElement($form->get('idMunicipio'));?>                            
                         </div>
+                        <div class="col-lg-1">
+                             <?php echo $this->formElement($form->get('btnBuscarMunicipio'));?>                            
+                        </div>
                     </div>
                     <div class="form-group">
                         <div class="col-lg-1 col-md-2 col-sm-3">
